<resources>
    <string name="app_name">ReminDay</string>
    <string name="title_home">Home</string>
    <string name="title_notifications">Notifications</string>

    <!-- General purpose -->
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="continue_">Continue</string>
    <string name="restart_required">Need to restart the app</string>
    <string name="do_not_ask_again">Do not ask again</string>
    <string name="are_you_sure">Are you sure?</string>


    <!-- Used in forms -->
    <string name="full_name">Name</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="birthday">Birthday</string>
    <string name="day">Day</string>
    <string name="month">Month</string>
    <string name="year">Year</string>

    <!-- Menu items -->
    <string name="add_birthday_item_text">Add birthday</string>
    <string name="import_from_contacts_item_text">Import from contacts</string>
    <string name="options_text">Options</string>
    <string name="edit_birthday_item_text">Edit birthday</string>
    <string name="delete_birthday_item_text">Delete birthday</string>

    <!-- Add/Edit birthday screen -->
    <string name="add_birthday_date_picker_icon_description">Enter the birthday</string>

    <!-- Birthday summary screen -->
    <string name="additional_info">Additional information</string>
    <string name="import_from_contacts_are_you_sure">Are you sure you want to import from contacts? Any existing birthday with a name conflict will be overwritten.</string>
    <string name="delete_birthday_are_you_sure">Are you sure you want to delete this entry? This action is irreversible.</string>
    <string name="birthday_will_be_overwritten">A birthday for a person with the same name already exists. Are you sure you want to overwrite that entry?</string>
    <string name="import_from_contacts_no_contacts">Found no contacts to import</string>

    <string name="button_info_add_content_description">Add additional information</string>

    <!-- Notifications -->
    <string name="notif_channel_title">ReminDay - Birthday</string>
    <string name="notif_channel_description">Notifies of birthdays occurring today</string>
    <string name="notif_title">Happy Birthday %1$s !</string>
    <string name="notif_text">"Today is the %1$s, it's %2$s's birthday."</string>
    <string name="notif_additional_text_year_known">"They are %1$d!"</string>

    <!-- Preferences ids (not translatable) -->
    <string name="prefs_show_delete_confirmation" translatable="false">show_delete_confirmation</string>
    <string name="prefs_require_user_unlock" translatable="false">prefs_require_user_unlock</string>
    <string name="prefs_notification_time" translatable="false">prefs_notification_time</string>

    <!-- Preferences strings for display -->
    <string name="prefs_category_general">General settings</string>
    <string name="prefs_require_user_unlock_title">Require user unlock at startup</string>
    <string name="prefs_notification_time_title">Notification time</string>
    <string name="prefs_notification_time_value">%1s</string>
    <string name="prefs_notification_time_summary">Time at which the notification for a birthday should be fired.</string>

    <string name="prefs_category_dialogs">Dialog settings</string>
    <string name="prefs_show_delete_confirmation_title">Delete confirmation dialog</string>
    <string name="prefs_show_delete_confirmation_summary">Display confirmation dialog when deleting a birthday</string>

</resources>
